frequency and encoding added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <textarea class="textarea" id="string2"></textarea>
         <button class="form__button" type="submit">Decode</button>
       </form>
+      <form class="form" id="decode">
+        <textarea class="textarea" id="string3"></textarea>
+        <button class="form__button" type="submit">Decode</button>
+      </form>
     </div>
 
   </body>
