--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
       </form>
       <form class="form" id="decode">
         <textarea class="textarea" id="string3"></textarea>
-        <button class="form__button" type="submit">Decode</button>
+        <!-- <button class="form__button" type="submit">Decode</button> -->
+      </form>
+      <form class="form" id="decode">
+        <textarea class="textarea" id="string4"></textarea>
+        <!-- <button class="form__button" type="submit">Decode</button> -->
+      </form>
+      <form class="form" id="decode">
+        <textarea class="textarea" id="string5"></textarea>
+        <!-- <button class="form__button" type="submit">Decode</button> -->
       </form>
     </div>
 
