copy functionality added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </form>
       <form class="form" id="encode">
         <textarea class="textarea" id="string2"></textarea>
-        <button class="form__button" type="submit" onclick="copy()">Copy</button>
+        <button class="form__button" type="submit" onclick="copy(event)">Copy</button>
       </form>
       <form class="form" id="encode">
         <textarea class="textarea" id="string3"></textarea>
