--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
     
 </head>
 
@@ -15,23 +18,23 @@
   
     <div class="form-wrap">
       <form class="form" id="encode">
-        <textarea class="textarea " id="string1" placeholder="type anything to decode "></textarea>
+        <textarea class="textarea " id="string1" placeholder="TYPE ANYTHING YOU WANTED TO ENCODE  "></textarea>
         <button class="form__button" type="submit" onclick="display(event)">Encode</button>
       </form>
       <form class="form" id="encode">
-        <textarea class="textarea" id="string2"></textarea>
+        <textarea class="textarea" id="string2" placeholder="YOU WILL SEE THE ENCODED TEXT HERE"></textarea>
         <button class="form__button" type="submit" onclick="copy(event)">Copy</button>
       </form>
       <form class="form" id="encode">
-        <textarea class="textarea" id="string3"></textarea>
+        <textarea class="textarea" id="string3" placeholder="YOU WILL SEE THE ENCODING OF EACH CHARECTER HERE"></textarea>
         <!-- <button class="form__button" type="submit">Decode</button> -->
       </form>
       <form class="form" id="encode">
-        <textarea class="textarea" id="string4"></textarea>
+        <textarea class="textarea" id="string4" placeholder="YOU WILL SE THE FREQUENCY OF EACH CHARECTER HERE"></textarea>
         <!-- <button class="form__button" type="submit">Decode</button> -->
       </form>
       <form class="form" id="encode">
-        <textarea class="textarea" id="string5"></textarea>
+        <textarea class="textarea" id="string5" placeholder="YOU WILL SEE THE SPACE REQUIRED FOR ENCODING(IN BITS) HERE"></textarea>
         <!-- <button class="form__button" type="submit">Decode</button> -->
       </form>
     </div>
