--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
         <!-- <button class="form__button" type="submit">Decode</button> -->
       </form>
       <form class="form" id="encode">
-        <textarea class="textarea" id="string5" placeholder="YOU WILL SEE THE SPACE REQUIRED FOR ENCODING(IN BITS) HERE"></textarea>
+        <textarea class="textarea" id="string5" placeholder="YOU WILL SEE THE SPACE REQUIRED FOR ENCODING (IN BITS) HERE"></textarea>
         <!-- <button class="form__button" type="submit">Decode</button> -->
       </form>
     </div>
 
     <div class="form-wrap2">
       <form class="form" id="decode">
-        <textarea class="textarea " id="string6" placeholder="type anything to encode "></textarea>
+        <textarea class="textarea " id="string6" placeholder="TYPE ANY ENCODED STRING HERE TO DECODE "></textarea>
         <button class="form__button2" type="submit" onclick="display2(event)">Decode</button>
       </form>
       <form class="form" id="decode">
-        <textarea class="textarea" id="string7"></textarea>
+        <textarea class="textarea" id="string7" placeholder="YOU WILL SEE THE DECODED STRING HERE "></textarea>
       </form>
     </div>
 
