--- a/shanon.html
+++ b/shanon.html
@@ -8,6 +8,146 @@
     <script src="shanon.js"></script>
   </head>
   <body>
+
+    <style>
+      body {
+          background: #9384D1;
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+      }
+
+      .maincontainer {
+          background-color: #ECC9EE;
+          margin: 60px;
+          height: 625px;
+          border-radius: 8px;
+          box-shadow: 7px 12px 30px black;
+
+      }
+
+      .heading {
+          text-align: center;
+          font-size: xx-large;
+          font-family: 'Bruno Ace SC', cursive;
+          margin-top: 30px;
+      }
+
+      .bcontainer {
+          display: flex;
+          justify-content: center;
+          flex-direction: row;
+          gap: 25px;
+          margin-top: 30px;
+          margin-bottom: 30px;
+      }
+
+      button {
+          width: 80px;
+          height: 60px;
+          font-size: 15px;
+          background-color: #E3F2C1;
+      }
+
+
+      .container {
+          display: flex;
+          justify-content: center;
+          flex-direction: row;
+          gap: 25px;
+          margin-top: 20px;
+      }
+      
+      
+      textarea {
+          resize: none;
+          width: 200px;
+          height: 250px;
+          border-radius: 5px;
+          text-align: center;
+          color: black;
+          border: 3px solid #9384D1;
+          font-family: cursive;
+
+      }
+
+      .textarea:is(:focus,:valid){
+          padding-top: 40px;
+          box-sizing: border-box;
+      }
+
+      .textarea2:is(:focus,:valid){
+          padding-top: 60px;
+          box-sizing: border-box;
+      }
+
+      textarea::-webkit-scrollbar{
+          width: 0px;
+      }
+
+      textarea::placeholder{
+          color: black;
+      }
+
+      .container2 {
+          display: flex;
+          justify-content: center;
+          flex-direction: row;
+          gap: 35px;
+          margin-top: 20px;
+      }
+
+      .container2 textarea {
+          resize: none;
+          width: 400px;
+          height: 150px;
+      }
+
+
+
+
+      .buttonit {
+          --c: #ECC9EE;
+          width: 120px;
+          height: 60px;
+          font-size: 15px;
+          background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p, 100%)/300% no-repeat, #9384D1;
+          color: #0000;
+          border: none;
+          transform: perspective(500px) rotateY(calc(20deg*var(--_i, -1)));
+          text-shadow: calc(var(--_i, -1)* 0.08em) -.01em 0 var(--c),
+              calc(var(--_i, -1)*-0.08em) .01em 2px #0004;
+          outline-offset: .1em;
+          transition: 0.3s;
+      }
+
+      .buttonit:hover,
+      .buttonit:focus-visible {
+          --_p: 0%;
+          --_i: 1;
+      }
+
+      .buttonit:active {
+          text-shadow: none;
+          color: var(--c);
+          box-shadow: inset 0 0 9e9q #0005;
+          transition: 0s;
+      }
+
+      .buttonit {
+          font-weight: bold;
+          font-size: 2rem;
+          margin: 0;
+          cursor: pointer;
+          padding: .1em .3em;
+      }
+
+
+  </style>
+
+
+
+
     <div class="form-wrap">
       <form class="form" id="encode">
         <textarea
