--- a/shanon.html
+++ b/shanon.html
@@ -166,6 +166,20 @@
           placeholder="YOU WILL SEE THE ENCODED TEXT HERE"
         ></textarea>
       </form>
+      <form class="form" id="encode">
+        <textarea
+          class="textarea"
+          id="string3"
+          placeholder="YOU WILL SEE THE ENCODED TEXT HERE"
+        ></textarea>
+      </form>
+      <form class="form" id="encode">
+        <textarea
+          class="textarea"
+          id="string4"
+          placeholder="YOU WILL SEE THE ENCODED TEXT HERE"
+        ></textarea>
+      </form>
     </div>
   </body>
 </html>
