FInal website linked

--- a/landing.html
+++ b/landing.html
@@ -11,6 +11,7 @@
 
 <body>
 
+    <div class="main">
     <div class="first">
         <div class="text1">Encoding &#38 Decoding</div>
     </div>
@@ -37,23 +38,29 @@
         <div class="text4">Our Project</div>
         <div class="fourthsub">
             <div class="book">
-                <p class="p4">data</p>
+                <a href="Huffman.html" >
+                <p class="p4">In this project a given string will be encoded & decoded using Huffman algorithm.</p>
+                </a>
                 <div class="cover">
                     <p class="p4">Huffman Encoding & Decoding on Strings</p>
                 </div>
             </div>
 
             <div class="book book2">
-                <p class="p4">data</p>
+                <a href="ShannonF.html">
+                <p class="p4">In this project a given string will be encoded by Shannon Fano algorithm.</p>
+                </a>
                 <div class="cover cover2">
-                    <p class="p4">Image Compression using Huffman Encoding</p>
+                    <p class="p4">Shannon Fano Encoding</p>
                 </div>
             </div>
-
+            
             <div class="book book3">
-                <p class="p4">data</p>
+                <a href="ImageC.html">
+                <p class="p4">In this project we show how much a image can be compressed by using Huffman algorithm</p>
+                </a>
                 <div class="cover cover3">
-                    <p class="p4">Shannon Fano Encoding</p>
+                    <p class="p4">Image Compression using Huffman Encoding</p>
                 </div>
             </div>
         </div>
@@ -70,11 +77,11 @@
         </a>
 
         <div class="img5">
-        <img src="exampleGIF.gif" alt="" width="300" height="250" class="img2">
+        <img src="/Landing Page images/exampleGIF.gif" alt="" width="300" height="250" class="img2">
         </div>
 
     </div>
-
+</div>
 </body>
 
 </html>
