images changed and css error removed

--- a/landing.html
+++ b/landing.html
@@ -22,11 +22,11 @@
             <p class="ptext2"> Encoding is the process of applying a specific code,<br> such as letters, symbols and
                 numbers, to data <br>for conversion into an equivalent cipher.</p>
         </div>
-        <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
+        <img src="/Landing Page images/Lazarus-hacking-Group-North-Korea-behind-recent-cyber-campaign-866424.jpg" alt="" width="450" height="300" class="img2">
     </div>
 
     <div class="second third">
-        <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
+        <img src="/Landing Page images/decoding3.jpg" alt="" width="450" height="300" class="img2">
         <div class="text2 ">
             <h3 class="htext2 ht3">Decoding</h3>
             <p class="ptext2 pt3"> Decoding is the process of converting code into plain text<br> or any format that is
