--- a/landing.html
+++ b/landing.html
@@ -12,76 +12,120 @@
 <body>
 
     <div class="main">
-    <div class="first">
-        <div class="text1">Encoding &#38 Decoding</div>
-    </div>
-
-    <div class="second">
-        <div class="text2">
-            <h3 class="htext2">Encoding</h3>
-            <p class="ptext2"> Encoding is the process of applying a specific code,<br> such as letters, symbols and
-                numbers, to data <br>for conversion into an equivalent cipher.</p>
+        <div class="first">
+            <div class="text1">Encoding &#38 Decoding</div>
         </div>
-        <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
-    </div>
 
-    <div class="second third">
-        <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
-        <div class="text2 ">
-            <h3 class="htext2 ht3">Decoding</h3>
-            <p class="ptext2 pt3"> Decoding is the process of converting code into plain text<br> or any format that is
-                useful for subsequent processes.<br>It converts encoded data files to their original states.</p>
+        <div class="second">
+            <div class="text2">
+                <h3 class="htext2">Encoding</h3>
+                <p class="ptext2"> Encoding is the process of applying a specific code,<br> such as letters, symbols and
+                    numbers, to data <br>for conversion into an equivalent cipher.</p>
+            </div>
+            <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
         </div>
-    </div>
 
-    <div class="fourth">
-        <div class="text4">Our Project</div>
-        <div class="fourthsub">
-            <div class="book">
-                <a href="Huffman.html" >
-                <p class="p4">In this project a given string will be encoded & decoded using Huffman algorithm.</p>
-                </a>
-                <div class="cover">
-                    <p class="p4">Huffman Encoding & Decoding on Strings</p>
+        <div class="second third">
+            <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
+            <div class="text2 ">
+                <h3 class="htext2 ht3">Decoding</h3>
+                <p class="ptext2 pt3"> Decoding is the process of converting code into plain text<br> or any format that
+                    is
+                    useful for subsequent processes.<br>It converts encoded data files to their original states.</p>
+            </div>
+        </div>
+
+        <div class="fourth">
+            <div class="text4">Our Project</div>
+            <div class="fourthsub">
+                <div class="book">
+                    <a href="Huffman.html">
+                        <p class="p4">In this project a given string will be encoded & decoded using Huffman algorithm.
+                        </p>
+                    </a>
+                    <div class="cover">
+                        <p class="p4">Huffman Encoding & Decoding on Strings</p>
+                    </div>
+                </div>
+
+                <div class="book book2">
+                    <a href="ShannonF.html">
+                        <p class="p4">In this project a given string will be encoded by Shannon Fano algorithm.</p>
+                    </a>
+                    <div class="cover cover2">
+                        <p class="p4">Shannon Fano Encoding</p>
+                    </div>
+                </div>
+
+                <div class="book book3">
+                    <a href="ImageC.html">
+                        <p class="p4">In this project we show how much a image can be compressed by using Huffman
+                            algorithm</p>
+                    </a>
+                    <div class="cover cover3">
+                        <p class="p4">Image Compression using Huffman Encoding</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="book book2">
-                <a href="ShannonF.html">
-                <p class="p4">In this project a given string will be encoded by Shannon Fano algorithm.</p>
-                </a>
-                <div class="cover cover2">
-                    <p class="p4">Shannon Fano Encoding</p>
-                </div>
-            </div>
+        </div>
+
+        <div class="fifth">
             
-            <div class="book book3">
-                <a href="ImageC.html">
-                <p class="p4">In this project we show how much a image can be compressed by using Huffman algorithm</p>
-                </a>
-                <div class="cover cover3">
-                    <p class="p4">Image Compression using Huffman Encoding</p>
+            <a href="https://cmps-people.ok.ubc.ca/ylucet/DS/Huffman.html" target="_blank">
+                <div class="card img2">
+                    <div class="card-info">
+                        <p class="title">Click here to see the visualizations of huffman coding</p>
+                    </div>
                 </div>
+            </a>
+            
+            <div class="text5">
+                HUFFMAN BINARY TREE
             </div>
+
+            <div class="img5">
+                <img src="/Landing Page images/exampleGIF.gif" alt="" width="300" height="250" class="img2">
+            </div>
+
+
         </div>
 
     </div>
 
-    <div class="fifth">
-        <a href="https://cmps-people.ok.ubc.ca/ylucet/DS/Huffman.html" target="_blank">
-        <div class="card img2">
-            <div class="card-info">
-                <p class="title">Click here to see the visualizations of huffman coding</p>
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet">
+   
+
+    <footer>
+        <div class="footer">
+            <div class="row">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+            </div>
+
+            <div class="row">
+                <ul>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Our Services</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                </ul>
+            </div>
+
+            <div class="row">
+             Copyright © 2023 All rights reserved || Designed By: B9 ke 4 Bache
             </div>
         </div>
-        </a>
+    </footer>
 
-        <div class="img5">
-        <img src="/Landing Page images/exampleGIF.gif" alt="" width="300" height="250" class="img2">
-        </div>
 
-    </div>
-</div>
 </body>
 
 </html>
