--- a/ShannonF.html
+++ b/ShannonF.html
@@ -1,75 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shanon-fano Encoding</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="ShannonF.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="ShannonF.css" />
+  </head>
 
-</head>
-
-<body>
-
-
+  <body>
     <div class="maincontainer">
-        <div class="heading">
-            Shnannon-Fano Encoding
-        </div>
+      <div class="heading">Shnannon-Fano Encoding</div>
 
-        <div class="container">
+      <div class="container">
+        <form class="item" id="encode">
+          <textarea
+            placeholder="TYPE ANYTHING YOU WANTED TO ENCODE  "
+            class="textarea"
+            id="string1"
+          ></textarea>
+        </form>
 
-            <form class="item" id="encode">
-                <textarea placeholder="TYPE ANYTHING YOU WANTED TO ENCODE  " class="textarea" id="string1"></textarea>
-            </form>
+        <form class="item" id="encode">
+          <textarea
+            placeholder="ENCODED TEXT"
+            class="textarea"
+            id="string2"
+          ></textarea>
+        </form>
 
-            <form class="item" id="encode">
-                <textarea placeholder="ENCODED TEXT" class="textarea" id="string2"></textarea>
-            </form>
+        <form class="item" id="encode">
+          <textarea
+            placeholder="ENCODING OF EACH CHARACTER"
+            class="textarea"
+            id="string3"
+          ></textarea>
+        </form>
 
-            <form class="item" id="encode">
-                <textarea placeholder="ENCODING OF EACH CHARACTER" class="textarea" id="string3"></textarea>
-            </form>
+        <form class="item" id="encode">
+          <textarea
+            placeholder="FREQUENCY OF EACH CHARACTER"
+            class="textarea"
+            id="string4"
+          ></textarea>
+        </form>
 
-            <form class="item" id="encode">
-                <textarea placeholder="FREQUENCY OF EACH CHARACTER" class="textarea" id="string4"></textarea>
-            </form>
+        <form class="item" id="encode">
+          <textarea
+            placeholder="SPACE CONSUMED"
+            class="textarea"
+            id="string5"
+          ></textarea>
+        </form>
+      </div>
 
-            <form class="item" id="encode">
-                <textarea placeholder="SPACE CONSUMED" class="textarea" id="string5"></textarea>
-            </form>
+      <div class="bcontainer">
+        <button class="buttonit" type="submit" onclick="display(event)">
+          Encode
+        </button>
+        <button class="buttonit" type="submit" onclick="copy(event)">
+          Copy
+        </button>
+        <button class="buttonit" type="submit" onclick="display2(event)">
+          Decode
+        </button>
+      </div>
 
-        </div>
+      <div class="container2">
+        <form class="item" id="decode">
+          <textarea
+            placeholder="TYPE ANY ENCODED STRING HERE TO DECODE"
+            class="textarea2 stextarea"
+            id="string5"
+          ></textarea>
+        </form>
 
-        <div class="bcontainer">
-            <button class="buttonit" type="submit" onclick="display(event)">Encode</button>
-            <button class="buttonit" type="submit" onclick="copy(event)">Copy</button>
-            <button class="buttonit" type="submit" onclick="display3(event)">Decode</button>
-        </div>
-
-        <div class="container2">
-            <form class="item" id="decode">
-                <textarea placeholder="TYPE ANY ENCODED STRING HERE TO DECODE" class="textarea2 stextarea" id="string5"></textarea>
-            </form>
-
-            <form class="item" id="decode">
-                <textarea placeholder="DECODED STRING" class="textarea2 stextarea5" id="string6"></textarea>
-            </form>
-        </div>
-
-        
+        <form class="item" id="decode">
+          <textarea
+            placeholder="DECODED STRING"
+            class="textarea2 stextarea5"
+            id="string6"
+          ></textarea>
+        </form>
+      </div>
     </div>
 
-
-
- 
     <script src="shanon.js"></script>
-</body>
-
+  </body>
 </html>
