finalising landing page

--- a/landing.html
+++ b/landing.html
@@ -104,23 +104,22 @@
     <footer>
         <div class="footer">
             <div class="row">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-youtube"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <p>This project is Made by The following students of B9 Batch<br>
+                    For the project Based learning of the subject Algoritm and problem solving <br>course code - (15B17CI471)<br>Under the 
+                guidance of Mr. Tribhuvan kumar tewari (SIR)  </p>
             </div>
 
             <div class="row">
                 <ul>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Monic Vyas-21103315</a></li>
+                    <li><a href="#">Ajit Kumar-21103317</a></li>
+                    <li><a href="#">Ashmeer kaur-21103311</a></li>
+                    <li><a href="#">Juhi sharma-21103294</a></li>
                 </ul>
             </div>
 
             <div class="row">
-             Copyright © 2023 All rights reserved || Designed By: B9 ke 4 Bache
+             Copyright © 2023 || All rights reserved || Designed By: B9 STUDENTS
             </div>
         </div>
     </footer>
