landing page finalised

--- a/landing.html
+++ b/landing.html
@@ -19,14 +19,14 @@
         <div class="second">
             <div class="text2">
                 <h3 class="htext2">Encoding</h3>
-                <p class="ptext2"> Encoding is the process of applying a specific code,<br> such as letters, symbols and
+                <p class="ptext2"> Encoding (convert into a coded form) is the process of applying <br>a specific code, such as letters, symbols and
                     numbers, to data <br>for conversion into an equivalent cipher.</p>
             </div>
-            <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
+            <img src="/Landing Page images/Lazarus-hacking-Group-North-Korea-behind-recent-cyber-campaign-866424.jpg" alt="" width="450" height="300" class="img2">
         </div>
 
         <div class="second third">
-            <img src="/Landing Page images/Keyboardbw.jpg" alt="" width="450" height="300" class="img2">
+            <img src="/Landing Page images/decoding3.jpg" alt="" width="450" height="300" class="img2">
             <div class="text2 ">
                 <h3 class="htext2 ht3">Decoding</h3>
                 <p class="ptext2 pt3"> Decoding is the process of converting code into plain text<br> or any format that
@@ -106,7 +106,7 @@
             <div class="row">
                 <p>This project is Made by The following students of B9 Batch<br>
                     For the project Based learning of the subject Algoritm and problem solving <br>course code - (15B17CI471)<br>Under the 
-                guidance of Mr. Tribhuvan kumar tewari (SIR)  </p>
+                guidance of (SIR) Mr. Tribhuvan Kumar Tewari   </p>
             </div>
 
             <div class="row">
