--- a/ShannonF.html
+++ b/ShannonF.html
@@ -30,7 +30,7 @@
         <form class="item" id="encode">
           <textarea
             placeholder="TYPE ANYTHING YOU WANTED TO ENCODE  "
-            class="textarea"
+            class="textarea stextarea"
             id="string1"
           ></textarea>
         </form>
@@ -38,7 +38,7 @@
         <form class="item" id="encode">
           <textarea
             placeholder="ENCODED TEXT"
-            class="textarea"
+            class="textarea stextarea"
             id="string2"
           ></textarea>
         </form>
@@ -46,7 +46,7 @@
         <form class="item" id="encode">
           <textarea
             placeholder="ENCODING OF EACH CHARACTER"
-            class="textarea"
+            class="textarea stextarea"
             id="string3"
           ></textarea>
         </form>
@@ -54,7 +54,7 @@
         <form class="item" id="encode">
           <textarea
             placeholder="FREQUENCY OF EACH CHARACTER"
-            class="textarea"
+            class="textarea stextarea"
             id="string4"
           ></textarea>
         </form>
@@ -62,7 +62,7 @@
         <form class="item" id="encode">
           <textarea
             placeholder="SPACE CONSUMED"
-            class="textarea"
+            class="textarea stextarea5"
             id="string5"
           ></textarea>
         </form>
