--- a/ImageC.html
+++ b/ImageC.html
@@ -18,7 +18,7 @@
    
 
     <script>
-//    loader function dal na 
+//    loader function dal na hai
     </script>
 
     <div class="maincontainer">
