--- a/ImageC.html
+++ b/ImageC.html
@@ -57,7 +57,7 @@
             var image = document.getElementById('output');
             image.src = URL.createObjectURL(event.target.files[0]);
         };
-        </script
+    </script>
 
 </body>
 
