--- a/ImageC.html
+++ b/ImageC.html
@@ -42,13 +42,16 @@
             </div>
             <!-- <div class="loader" id="loader"">
             </div> -->
+            <div class="compo3">
+
             
             <form class="form" id="encode">
                 <textarea readonly class="textarea2" id="string2"
                     placeholder="YOU WILL SEE THE ENCODED TEXT HERE"></textarea>
             </form>
+            <img id="output" width="150"/>
         </div>
-        <img id="output" width="150" style="position: absolute; left: 210px ;bottom: 180px; border-radius: 4px; border: 1px solid black;"/>
+        </div>
     </div>
     </div>
 
