--- a/landing.html
+++ b/landing.html
@@ -119,7 +119,7 @@
             </div>
 
             <div class="row">
-             Copyright © 2023 || All rights reserved || Designed By: B9 STUDENTS
+             Copyright © 2023 || All rights reserved || Designed By: B9 KE CHAR BACCHE
             </div>
         </div>
     </footer>
